# progetto_architettura_elaboratori_2019

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  Note.md  README.md  gestioneVettore.c  test.s
other/: gestioneVettore.c  test.c  test.s
other/asset/: gestioneVettore.s
other/test/: test.c  test.s
relation/: Relation.md
src/: GestioneVettore.s
src-32/functions/: calcolaMax.s  cercaValore.s  eseguiOpzione.s  posizioneMin.s  stampaVettore.s
src/data/: data.s
src/functions/: a.out  calcolaMax.s  calcolaMediaIntera.s  calcolaMin.s  cercaValore.s  eseguiOpzione.s  numeroPari.s  posizioneMax.s  posizioneMin.s  stampaOpzioni.s  stampaVettore.s  valoreFrequente.s
src_32/: GestioneVettore.s
src_32/data/: data.s
src_32/functions/: calcolaMax.s  calcolaMediaIntera.s  calcolaMin.s  cercaValore.s  eseguiOpzione.s  numeroPari.s  posizioneMax.s  posizioneMin.s  stampaOpzioni.s  stampaVettore.s  valoreFrequente.s
test/: gestione_vettore.h  main.h  test.cpp
test/time/: gestioneVettore.c  gestione_vettore.h  gestione_vettore_c.h  time.c
